* 2008-01-03 - francisco.laguna@open-xchange.com

 - Bugfix #10395: Don't recurse for webdav listing if permissions don't allow it.

* 2008-01-02 - francisco.laguna@open-xchange.com

 - Bugfix #9837: Allow forward slashes as part of WebDAV URLs

############### CONFIG CHANGE ##################
#                                              #
#   For this to work, this must be added to    #
#   the apache config:                         #
#                                              #
#   AllowEncodedSlashes On                     #
#                                              #
#   Otherwise the forward slashes are not      #
#   passed to our servlet container.           #
#                                              #
################################################

 - Bugfix #8676 : Requests for LockNullResources are supposed to return
   404 on most requests.
 - Bugfix #9903: Applied patch.
 - Bugfix #9904: Applied patch.

* 2007-12-12 - thorben.betten@open-xchange.com

 - Bugfix #10608: Allowing email addresses with pipe character "|" in
   personal part

* 2007-12-10 - thorben.betten@open-xchange.com

 - Bugfix #10393: MBox support

* 2007-12-07 - marcus.klein@open-xchange.com

 - Bugfix 10559: Checking the defaultSendAddress if a valid value is written.

* 2007-12-05 - thorben.betten@open-xchange.com

 - Bugfix #10503: Sending W3C conform html
 - Bugfix #10526: Text-only drafts are now kept as text-only and got no
   more converted to html

* 2007-12-04 - marcus.klein@open-xchange.com

 - Bugfix #10524: Removed a wrong logging.

* 2007-11-29 - thorben.betten@open-xchange.com

 - Bugfix #10460: AJP exception enhanced by a keep alive flag to indicate
   whether to close or keep established AJP connection. Thus any exception
   related to a broken socket has its flag set to false -> close connection.

* 2007-11-27 - thorben.betten@open-xchange.com

 - Bugfix #9963: Avoiding infinite loops of broken pipe errors on a lost
   socket connection
