@@ -26,3 +26,5 @@ com.openexchange.groupware.update.tasks.InfostoreRenamePersonalInfostoreFolders
 com.openexchange.groupware.calendar.update.UpdateFolderIdInReminder
 # Version 11
 com.openexchange.groupware.update.tasks.ClearLeftoverAttachmentsUpdateTask
+# Version 12
+com.openexchange.groupware.update.tasks.InfostoreResolveFolderNameCollisions
